Closed Bug 1642602 Opened 5 years ago Closed 5 years ago

Some disk cache values in about:cache are incorrect.

Categories

(Core :: Networking: Cache, defect, P3)

79 Branch
x86_64
Windows 10
defect

Tracking

()

VERIFIED FIXED
mozilla80
Tracking Status
firefox-esr68 --- wontfix
firefox-esr78 --- wontfix
firefox77 --- wontfix
firefox78 --- wontfix
firefox79 --- wontfix
firefox80 --- verified

People

(Reporter: streetwolf52, Assigned: mayhemer)

References

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:79.0) Gecko/20100101 Firefox/79.0

Steps to reproduce:

Go to about:cache.

Observe 'Number of entries' and 'Storage in use.'

Actual results:

'Number off entries' and 'Storage in use' are greatly under reported.

Expected results:

The stats should be correctly reported. Here is an example from my system:

ABOUT:CACHE
disk
Number of entries: 732
Maximum storage size: 1048576 KiB
Storage in use: 16699 KiB
Storage disk location: D:\cache2

When I look at the cache folder in file manager it is 1Gb (fully utilized) with over 18,000 files. I cleared my cache many times with the same result.

OS: Unspecified → Windows 10
Hardware: Unspecified → x86_64
Component: Untriaged → Networking: Cache
Product: Firefox → Core

Honza, is this related to the issue you reported some time ago?

Flags: needinfo?(honzab.moz)
Attached image cache.png

Gary, I need more details here please in order to provide a regression window.
Do you compare the info for about:cache from disk section with "Cache2" folder properties? (Please see screenshot attached)
Thanks.

Flags: needinfo?(garyshap)
Attached image cache screenshots

Per your request.

Flags: needinfo?(garyshap)

Michal, as I remember, we take this information from the index - could it be some problem with rebuilding it?

Flags: needinfo?(honzab.moz) → needinfo?(michal.novotny)

(In reply to Honza Bambas (:mayhemer) from comment #4)

Michal, as I remember, we take this information from the index - could it be some problem with rebuilding it?

This is because the stats is shown according to the filter at the top of the page. I'm not even sure whether all combinations of private/anonymous will cover all entries or whether using specific origin attributes or idExtension will make the entries inaccessible in about:cache. Honza, you should know this better.

Flags: needinfo?(michal.novotny) → needinfo?(honzab.moz)

I can reproduce something weird with my regular profile too. We don't have (good) automated testing for this, so bugs can be easily missed. I'll take a look.

Assignee: nobody → honzab.moz
Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(honzab.moz)
Priority: -- → P3
Whiteboard: [necko-triaged]

Managed to reproduce the issue with Nightly 79.0a1 (2020-06-02).
Regression window:

(In reply to abodenlosz from comment #7)

Managed to reproduce the issue with Nightly 79.0a1 (2020-06-02).
Regression window:

Thanks. This could be bug 1369051. Michal, do you see any relation between the symptoms and that bug?

Flags: needinfo?(michal.novotny)

Please see my comment #5. Numbers in about:cache don't report all entries in the cache, it's a filtered view. Bug 1369051 isn't anyhow related to it.

Flags: needinfo?(michal.novotny)
Status: NEW → ASSIGNED
Pushed by honzab.moz@firemni.cz: https://hg.mozilla.org/integration/autoland/rev/1b056b29e7fc Make about:cache show all entries, remove the no longer usable context switch UI, r=michal,necko-reviewers
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Regressions: 1650613

Confirmed the issue with Nightly 79.0a1 (2020-06-02) on Windows 10 x64.
Verified with Nightly 80.0a1 (2020-07-07) on windows 10 x64. Updating the flag to verified.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: