Bug 1642602 - Make about:cache show all entries, remove the no longer usable context switch UI, r=michal,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D81885