netwerk/protocol/about/nsAboutCache.cpp
@@ -94,17 +94,9 @@ nsresult nsAboutCache::Channel::Init(nsIURI* aURI, nsILoadInfo* aLoadInfo) {
       "<body class=\"aboutPageWideContainer\">\n"
       "<h1>Information about the Network Cache Storage Service</h1>\n");
 
-  // Add the context switch controls
-  mBuffer.AppendLiteral(
-      "<label><input id='priv' type='checkbox'/> Private</label>\n"
-      "<label><input id='anon' type='checkbox'/> Anonymous</label>\n");
-  mBuffer.AppendLiteral(
-      "<label><input id='submit' type='button' value='Update'/></label>\n");
-
   if (!mOverview) {
-    mBuffer.AppendLiteral("<a href=\"about:cache?storage=&amp;context=");
-    nsAppendEscapedHTML(mContextString, mBuffer);
-    mBuffer.AppendLiteral("\">Back to overview</a>");
+    mBuffer.AppendLiteral(
+        "<a href=\"about:cache?storage=\">Back to overview</a>");
   }
 
   rv = FlushBuffer();
@@ -146,8 +138,6 @@ nsresult nsAboutCache::Channel::ParseURI(nsIURI* uri, nsACString& storage) {
   rv = uri->GetPathQueryRef(path);
   if (NS_FAILED(rv)) return rv;
 
-  mContextString.Truncate();
-  mLoadInfo = CacheFileUtils::ParseKey(""_ns);
   storage.Truncate();
 
   nsACString::const_iterator start, valueStart, end;
@@ -159,17 +149,7 @@ nsresult nsAboutCache::Channel::ParseURI(nsIURI* uri, nsACString& storage) {
     return NS_OK;
   }
 
-  nsACString::const_iterator storageNameBegin = valueStart;
-
-  start = valueStart;
-  valueStart = end;
-  if (!FindInReadable("&context="_ns, start, valueStart)) start = end;
-
-  nsACString::const_iterator storageNameEnd = start;
-
-  mContextString = Substring(valueStart, end);
-  mLoadInfo = CacheFileUtils::ParseKey(mContextString);
-  storage.Assign(Substring(storageNameBegin, storageNameEnd));
+  storage.Assign(Substring(valueStart, end));
 
   return NS_OK;
 }
@@ -194,19 +174,11 @@ void nsAboutCache::Channel::FireVisitStorage() {
 
   rv = VisitStorage(mStorageName);
   if (NS_FAILED(rv)) {
-    if (mLoadInfo) {
-      nsAutoCString escaped;
-      nsAppendEscapedHTML(mStorageName, escaped);
-      mBuffer.Append(nsPrintfCString(
-          "<p>Unrecognized storage name '%s' in about:cache URL</p>",
-          escaped.get()));
-    } else {
-      nsAutoCString escaped;
-      nsAppendEscapedHTML(mContextString, escaped);
-      mBuffer.Append(nsPrintfCString(
-          "<p>Unrecognized context key '%s' in about:cache URL</p>",
-          escaped.get()));
-    }
+    nsAutoCString escaped;
+    nsAppendEscapedHTML(mStorageName, escaped);
+    mBuffer.Append(nsPrintfCString(
+        "<p>Unrecognized storage name '%s' in about:cache URL</p>",
+        escaped.get()));
 
     rv = FlushBuffer();
     if (NS_FAILED(rv)) {
@@ -222,7 +194,7 @@ void nsAboutCache::Channel::FireVisitStorage() {
 nsresult nsAboutCache::Channel::VisitStorage(nsACString const& storageName) {
   nsresult rv;
 
-  rv = GetStorage(storageName, mLoadInfo, getter_AddRefs(mStorage));
+  rv = GetStorage(storageName, nullptr, getter_AddRefs(mStorage));
   if (NS_FAILED(rv)) return rv;
 
   rv = mStorage->AsyncVisitStorage(this, !mOverview);
@@ -330,8 +302,6 @@ nsAboutCache::Channel::OnCacheStorageInfo(uint32_t aEntryCount,
           "  <tr>\n"
           "    <th><a href=\"about:cache?storage=");
       nsAppendEscapedHTML(mStorageName, mBuffer);
-      mBuffer.AppendLiteral("&amp;context=");
-      nsAppendEscapedHTML(mContextString, mBuffer);
       mBuffer.AppendLiteral(
           "\">List Cache Entries</a></th>\n"
           "  </tr>\n");
@@ -402,8 +372,10 @@ nsAboutCache::Channel::OnCacheEntryInfo(nsIURI* aURI,
   url.AssignLiteral("about:cache-entry?storage=");
   nsAppendEscapedHTML(mStorageName, url);
 
+  nsAutoCString context;
+  CacheFileUtils::AppendKeyPrefix(aInfo, context);
   url.AppendLiteral("&amp;context=");
-  nsAppendEscapedHTML(mContextString, url);
+  nsAppendEscapedHTML(context, url);
 
   url.AppendLiteral("&amp;eid=");
   nsAppendEscapedHTML(aIdEnhance, url);
@@ -427,7 +399,17 @@ nsAboutCache::Channel::OnCacheEntryInfo(nsIURI* aURI,
     mBuffer.Append(':');
   }
   mBuffer.Append(escapedCacheURI);
-  mBuffer.AppendLiteral("</a></td>\n");
+  mBuffer.AppendLiteral("</a>");
+
+  if (!context.IsEmpty()) {
+    mBuffer.AppendLiteral("<br><span title=\"Context separation key\">");
+    nsAutoCString escapedContext;
+    nsAppendEscapedHTML(context, escapedContext);
+    mBuffer.Append(escapedContext);
+    mBuffer.AppendLiteral("</span>");
+  }
+
+  mBuffer.AppendLiteral("</td>\n");
 
   // Content length
   mBuffer.AppendLiteral("    <td>");
@@ -505,8 +487,6 @@ nsAboutCache::Channel::OnCacheEntryVisitCompleted() {
   // We are done!
   mBuffer.AppendLiteral(
       "</body>\n"
-      "<script src=\"chrome://global/content/aboutCache.js\">"
-      "</script>\n"
       "</html>\n");
   nsresult rv = FlushBuffer();
   if (NS_FAILED(rv)) {
